# slider

./: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html  index.scss
src/: app.rs  components.rs  config.rs  main.rs  model.rs  rendering.rs  slideshow.rs
src/components/: app.rs  mod.rs  slideshow.rs
src/resources/: chelsea_venmo.txt  kaden_face.txt  kaden_venmo.txt
