[package]
name = "slider"
version = "0.1.0"
edition = "2021"
description = "Program for running simple slideshows from a file"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.20"
wasm-logger = "0.2.0"
yew = { version = "0.20", features = ["csr"] }
