[package]
name = "slider"
version = "0.1.0"
edition = "2021"
description = "Program for running simple slideshows from a file"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo = "0.11.0"
js-sys = "0.3.67"
log = "0.4.20"
serde = "1.0.196"
serde_json = "1.0.113"
wasm-bindgen = "0.2.90"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.67", features = [
    "File",
    "DragEvent",
    "DataTransfer",
] }
yew = { version = "0.20", features = ["csr"] }
